--- a/index.html
+++ b/index.html
@@ -427,7 +427,12 @@ textarea {
 @font-face {
   font-family: 'FontAwesome';
   src: url('public/lib/font-awesome/fonts/fontawesome-webfont.eot?v=4.5.0');
-  src: url('public/lib/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0') format('embedded-opentype'), url('public/lib/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0') format('woff2'), url('public/lib/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0') format('woff'), url('public/lib/font-awesome/fonts/fontawesome-webfont.ttf?v=4.5.0') format('truetype'), url('public/lib/font-awesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular') format('svg');
+  src: url('public/lib/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0')
+   format('embedded-opentype'), url('public/lib/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0')
+   format('woff2'), url('public/lib/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0')
+   format('woff'), url('public/lib/font-awesome/fonts/fontawesome-webfont.ttf?v=4.5.0')
+   format('truetype'), url('public/lib/font-awesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular')
+   format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -2504,7 +2509,16 @@ textarea {
 .fa-percent:before {
   content: "\f295";
 }
-</style><style> @media (max-width: 640) {
+</style><style> @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300);
+html, body {
+    font-family: 'Open Sans', sans-serif;
+    -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+    height: 100%;
+    background-color: #d9d2c6;
+}
+
+@media (max-width: 640) {
     .quote-container {
         height: 190px !important;
     }
@@ -2512,17 +2526,33 @@ textarea {
 
 @media (max-width: 320) {
     .quote-container {
-        height: 225px !important;
+        height: 230px !important;
     }
 }
-</style><style>@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300);
-html, body {
-    font-family: 'Open Sans', sans-serif;
-    -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
-    height: 100%;
-    background-image: url('public/assets/background.png');
-    background-size: cover;
-    background-position: 10% 50%;
-    border-radius: 5px;
-}</style></head></html><body><div class="navbar navbar-center"><div class="container"><div class="navbar-title"><span class="text-white" style="font-weight:300">Gabriel Csapo</span></div></div></div><div class="text-center" style="width:100%;position: absolute;top: 50%;transform: translateY(-50%)"><div class="quote-container" style="background-color: #eeeeee;padding: 10px;margin: auto;position: absolute;top: 0;left: 0;bottom: 0;right: 0;height: 170px"><h1 class="text-black" style="font-weight:100">Yesterday does not impact today, today impacts tomorrow.</h1><div><a class="btn btn-black border-radius-100" href="https://twitter.com/gabriel_csapo" target="_blank" style="margin-right:5px"><i class="fa fa-twitter"></i></a><a class="btn btn-black border-radius-100" href="https://www.linkedin.com/in/gabrielcsapo" target="_blank" style="margin-right:5px"><i class="fa fa-linkedin"></i></a><a class="btn btn-black border-radius-100" href="https://www.github.com/gabrielcsapo" target="_blank"><i class="fa fa-github"></i></a></div></div></div></body>
+
+@font-face {
+  font-family: emoji;
+
+  /* Fonts for text outside emoji blocks */
+  src: local('Droid Sans Mono'),
+       local('Lucida Console'),
+       local('Arial Monospaced'),
+       local(Arial);
+}
+
+@font-face {
+  font-family: emoji;
+
+  src: local('Apple Color Emoji'),
+       local('Android Emoji'),
+       local('Segoe UI'),
+       local(EmojiSymbols),
+       local(Symbola),
+       url('font/Symbola-Emoji.eot?#iefix') format('embedded-opentype'),
+       url('font/Symbola-Emoji.woff') format('woff'),
+       url('font/Symbola-Emoji.ttf') format('truetype');
+
+  /* Emoji unicode blocks */
+  unicode-range: U+1F300-1F5FF, U+1F600-1F64F, U+1F680-1F6FF, U+2600-26FF;
+}
+</style></head></html><body><div class="navbar navbar-center"><div class="container"><div class="navbar-title"><span class="text-black" style="font-size:20px;font-weight:300">Gabriel Csapo</span></div></div></div><div class="text-center" style="width:100%;position: absolute;top: 50%;transform: translateY(-50%)"><div class="grid"><div class="col-1-12"></div><div class="col-10-12"><div class="quote-container" style="background-color: #eeeeee;padding: 10px;margin: auto;position: absolute;top: 0;left: 0;bottom: 0;right: 0;height: 170px"><h1 class="text-black" style="font-weight:100">Yesterday does not impact today, today impacts tomorrow.</h1><div><a class="btn btn-black border-radius-100" href="https://twitter.com/gabriel_csapo" target="_blank" style="margin-right:5px"><i class="fa fa-twitter"></i></a><a class="btn btn-black border-radius-100" href="https://www.linkedin.com/in/gabrielcsapo" target="_blank" style="margin-right:5px"><i class="fa fa-linkedin"></i></a><a class="btn btn-black border-radius-100" href="https://www.github.com/gabrielcsapo" target="_blank"><i class="fa fa-github"></i></a></div></div></div><div class="col-1-12"></div></div></div><div class="navbar navbar-center" style="position:fixed;bottom:0"><div class="container text-center">created with ♥ by <a href="https://www.github.com/gabrielcsapo" target="_blank">@gabrielcsapo</a></div></div></body>
