--- a/index.html
+++ b/index.html
@@ -441,7 +441,15 @@ html, body {
 .btn.btn-black:hover {
     background-color: rgb(75, 75, 75);
 }
-
+svg.directed-graph {
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -100;
+}
 @media(max-width: 860) {
     .quote-container {
         height: 200px !important;
