fixes router catching all hrefs

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,5 @@
     </head>
     <body>
         <script src="dist/build.js"></script>
-    <script type="text/javascript" src="build.js"></script></body>
+    </body>
 </html>
