--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <link rel="stylesheet" href="dist/font-awesome/css/font-awesome.min.css">
     </head>
     <body>
+        <script src="dist/build.js"></script>
     <script type="text/javascript" src="build.js"></script></body>
 </html>
