updates depends and resume 😉

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,5 @@
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="dist/font-awesome/css/font-awesome.min.css">
     </head>
-    <body>
-        <script src="dist/build.js"></script>
-    </body>
+    <body></body>
 </html>
