--- a/index.html
+++ b/index.html
@@ -6,7 +6,5 @@
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="dist/font-awesome/css/font-awesome.min.css">
     </head>
-    <body>
-        <script src="dist/build.js"></script>
-    <script type="text/javascript" src="build.js"></script></body>
+    <body><script type="text/javascript" src="build.js"></script></body>
 </html>
