moves site generation to sweeney

--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Gabriel J. Csapo</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#317EFB"/>
-    <meta name="author" content="Gabriel J. Csapo">
-    <meta name="description" content="Aspiring to be a human being">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Gabriel J. Csapo">
-    <meta property="og:url" content="https://gabrielcsapo.com/">
-    <meta property="og:description" content="Aspiring to be a human being">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@gabrielcsapo">
-    <meta name="twitter:creator" content="@gabrielcsapo">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="text/javascript" src="./dist/vendor.bundle.js"></script>
-    <script type="text/javascript" src="./dist/bundle.js"></script>
-  </body>
-</html>
+<!DOCTYPE html> <html>   <head>     <title>Gabriel J. Csapo</title>     <meta charset="utf-8">     <meta name="viewport" content="width=device-width, initial-scale=1">     <meta name="theme-color" content="#317EFB"/>     <meta name="author" content="Gabriel J. Csapo">     <meta name="description" content="Aspiring to be a human being">     <meta property="og:type" content="website">     <meta property="og:title" content="Gabriel J. Csapo">     <meta property="og:url" content="https://gabrielcsapo.com/">     <meta property="og:description" content="Aspiring to be a human being">     <meta name="twitter:card" content="summary">     <meta name="twitter:site" content="@gabrielcsapo">     <meta name="twitter:creator" content="@gabrielcsapo">      <link rel="stylesheet" href="./fontawesome.min.css" >     <link rel="stylesheet" href="./fa-brands.min.css" >     <link rel="stylesheet" href="./fa-solid.min.css" >     <link rel="stylesheet" href="./fa-regular.min.css" >     <link rel="stylesheet" href="./psychic.min.css" >     <link rel="stylesheet" href="./index.css" >   </head>   <body>     <div id="root">       <div id="container">         <div class="navbar">           <div class="container">             <div class="navbar-title">               <a href="index.html" class="text-black">                 Gabriel J. Csapo               </a>             </div>           </div>         </div>         <div id="container-content">            <div style="width:100%;top:50%;transform:translateY(-50%);position:absolute;">   <a href="https://twitter.com/gabriel_csapo" target="_blank" rel="noopener noreferrer" style="margin-right: 5px;" data-tooltip="Twitter" class="btn btn-white tooltip-bottom">     <i class="fab fa-twitter"></i>   </a>   <a href="https://www.linkedin.com/in/gabrielcsapo" target="_blank" rel="noopener noreferrer" style="margin-right: 5px;" data-tooltip="Linkedin" class="btn btn-white tooltip-top">     <i class="fab fa-linkedin-in"></i>   </a>   <a href="https://www.github.com/gabrielcsapo" target="_blank" rel="noopener noreferrer" data-tooltip="Github" class="btn btn-white tooltip-bottom">     <i class="fab fa-github"></i>   </a>   <a href="./projects.html" data-tooltip="Projects" class="btn btn-white tooltip-top">     <i class="fas fa-map-signs"></i>   </a>   <a href="./gabriel_csapo.pdf" target="_blank" rel="noopener noreferrer" data-tooltip="Resume" class="btn btn-white tooltip-bottom">     <i class="fas fa-briefcase"></i>   </a> </div>          </div>         <div class="navbar navbar-center">           <div class="container text-center">             <a href="https://www.github.com/gabrielcsapo" target="_blank" rel="noopener noreferrer" data-tooltip="@gabrielcsapo" class="btn btn-black tooltip-top">               <img src="./coffee.svg" display="inline-block" height="25px">             </a>           </div>         </div>       </div>     </div>   </body> </html> 
