--- a/site/projects.html
+++ b/site/projects.html
@@ -5,29 +5,26 @@
 }
 ---
 
-<div style="width:80%;padding:10px;margin:0 auto;padding-bottom:25px;">
-  <h3> Projects </h3>
-  <small> These are a few projecst that I am passionate about. </small>
-  <br/>
-  <br/>
-  <ul class="list" style="width:auto;">
+<div>
+  <div class="project-container">
     {{ projects.map((project, i) => {
       const { description, name, homepage, html_url, topics, stars, forks } = project;
 
-      return (`<li class="list-item text-left">
+      return (`<div class="project">
         <a href="${ homepage || html_url }">
-          <span style="padding:0;margin:0;">
+          <div style="padding:0;margin:0;">
             ${ name }
+            <br/>
             <small class="text-black" style="font-weight:300">
             &nbsp;&nbsp;${ description }
             </small>
-          </span>
+          </div>
         </a>
 
-        <div class="badge badge-white" style="font-weight:100">
+        <div class="project-tags">
           ${ topics.join(', ') }
         </div>
-      </li>`);
+      </div>`);
     }).join('\n')
   }}
   </ul>
